--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       <div class="box__bottom-side">
         <div class="bottom-side__subscription">
           <h2 class="bottom-side__tittle">Monthly Subscription</h2>
-          <p class="buttom-side__price">$29 <span class="buttom-side__p--price">per month</span></p>
-          <p class="buttom-side__p">Full access for less than $1 a day</p>
-          <button class="buttom-side__botton">Sign Up</button>
+          <p class="bottom-side__price">$29 <span class="bottom-side__p--price">per month</span></p>
+          <p class="bottom-side__p">Full access for less than $1 a day</p>
+          <button class="bottom-side__button">Sign Up</button>
         </div>
 
-        <div class="buttom-side__info">
+        <div class="bottom-side__info">
           <h2 class="bottom-side__tittle">Why Us</h2>
-          <p class="buttom-side__p--left">Tutorials by industry experts<br>Peer & expert code review
+          <p class="bottom-side__p--left">Tutorials by industry experts<br>Peer & expert code review
             <br>Coding exercises<br>Access to our GitHub repos<br>
             Community forum<br>Flashcard decks<br>New videos every week
              </p>
