escrutura fist mobile

--- a/index.html
+++ b/index.html
@@ -16,38 +16,33 @@
  
 </head>
 <body>
+<div class="container">
+  <div class="box">
 
-  <div class="container">
+    <div class="box__community">
+      <h1 class="community__tittle">Join our community</h1>
+      <h2 class="community__subtittle">30-day, hassle-free nomey back guarantee</h2>
+      <p class="community__paragraph">Gain access to our full library of tutorials along with expert code reviews.
+        perfect for any developers who are serious about honing their skills.
+      </p>
+    </div>
 
-    <div class="box">
+    <div class="box__subscription">
+      <h2 class="subscription__tittle">Monthly Subscription</h2>
+      <h3 class="subscription__price">$29 <span>per month</span></h3>
+      <h4 class="subscription__subtittle">Full access for less that $1 a day</h4>
+      <button class="subscription__botton">Sign Up</button>
+    </div>
 
-      <div class="box__top-side">
-        <h2 class="top-side__tittle">Join our community</h2>
-        <h3 class="top-side__subtittle">30-day, hassle-free money back guarantee</h3>
-        <p class="top-side__p">Gain access to our full library of tutorials along with expert
-          code reviews. perfect for any developers who are serious about honing their skills.
-        </p>
-      </div>
-
-      <div class="box__bottom-side">
-        <div class="bottom-side__subscription">
-          <h2 class="bottom-side__tittle">Monthly Subscription</h2>
-          <p class="bottom-side__price">$29 <span class="bottom-side__p--price">per month</span></p>
-          <p class="bottom-side__p">Full access for less than $1 a day</p>
-          <button class="bottom-side__button">Sign Up</button>
-        </div>
-
-        <div class="bottom-side__info">
-          <h2 class="bottom-side__tittle">Why Us</h2>
-          <p class="bottom-side__p--left">Tutorials by industry experts<br>Peer & expert code review
-            <br>Coding exercises<br>Access to our GitHub repos<br>
-            Community forum<br>Flashcard decks<br>New videos every week
-             </p>
-        </div>
-      </div>
+    <div class="box__whyus">
+      <h2 class="whyus__tittle">Why Us</h2>
+      <p class="whyus__paragraph">Tutorials by insdustry experts peer & expert code review
+        coding axercises access to out GitHub repos community forum flascard decks new videos every week
+      </p>
     </div>
 
   </div>
-
+</div>
+  
 </body>
 </html>
