--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
    
-  
   <title>Frontend Mentor | Single Price Grid Component</title>
-
  
 </head>
 <body>
@@ -21,7 +19,7 @@
 
     <div class="box__community">
       <h1 class="community__tittle">Join our community</h1>
-      <h2 class="community__subtittle">30-day, hassle-free nomey back guarantee</h2>
+      <h2 class="community__subtittle">30-day, hassle-free money back guarantee</h2>
       <p class="community__paragraph">Gain access to our full library of tutorials along with expert code reviews.
         perfect for any developers who are serious about honing their skills.
       </p>
@@ -36,8 +34,8 @@
 
     <div class="box__whyus">
       <h2 class="whyus__tittle">Why Us</h2>
-      <p class="whyus__paragraph">Tutorials by insdustry experts peer & expert code review
-        coding axercises access to out GitHub repos community forum flascard decks new videos every week
+      <p class="whyus__paragraph">Tutorials by insdustry experts <br> peer & expert code review <br>
+        coding axercises <br> access to out GitHub repos <br> community forum <br> flascard decks <br> new videos every week
       </p>
     </div>
 
